--- a/app/src/main/res/layout/state_rv_item.xml
+++ b/app/src/main/res/layout/state_rv_item.xml
@@ -26,6 +26,7 @@
                 android:layout_margin="3dp"
                 android:gravity="center_horizontal"
                 android:padding="3dp"
+                android:id="@+id/idTVState"
                 android:text="StateName"
                 android:textAlignment="center"
                 android:textColor="@color/pink_500"
@@ -62,7 +63,7 @@
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
                         android:text="Number of Cases"
-                        android:id="@+id/idTVWorldCases"
+                        android:id="@+id/idTVCases"
                         android:textAligment="center"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
@@ -94,7 +95,7 @@
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
                         android:text="Number of Recovered"
-                        android:id="@+id/idTVWorldRecovered"
+                        android:id="@+id/idTVRecovered"
                         android:textAligment="center"
                         android:textAlignment="center"
                         android:textColor="@color/green"
@@ -115,7 +116,7 @@
                         android:padding="4dp"
                         android:text="Deaths"
                         android:textAligment="center"
-                        android:textAlignment="center"
+                        android:textAlignment="cesnter"
                         android:textColor="@color/red"
                         android:textSize="15sp"
                         android:textStype="bold" />
@@ -126,7 +127,7 @@
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
                         android:text="Number of Deaths"
-                        android:id="@+id/idTVWorldDeaths"
+                        android:id="@+id/idTVDeaths"
                         android:textAligment="center"
                         android:textAlignment="center"
                         android:textColor="@color/red"
