--- a/app/src/main/res/layout/state_rv_item.xml
+++ b/app/src/main/res/layout/state_rv_item.xml
@@ -27,7 +27,7 @@
                 android:gravity="center_horizontal"
                 android:padding="3dp"
                 android:id="@+id/idTVState"
-                android:text="StateName"
+                android:text="@string/statename"
                 android:textAlignment="center"
                 android:textColor="@color/pink_500"
                 android:textSize="18sp" />
@@ -50,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Cases"
+                        android:text="@string/Cases"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
                         android:textSize="15sp"
@@ -61,7 +61,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Cases"
+                        android:text="@string/number_of_cases"
                         android:id="@+id/idTVCases"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Cases"
+                        android:text="@string/Cases"
                         android:textAlignment="center"
                         android:textColor="@color/green"
                         android:textSize="15sp"
@@ -91,7 +91,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Recovered"
+                        android:text="@string/number_of_recovered"
                         android:id="@+id/idTVRecovered"
                         android:textAlignment="center"
                         android:textColor="@color/green"
@@ -110,7 +110,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Deaths"
+                        android:text="@string/deaths"
                         android:textAlignment="center"
                         android:textColor="@color/red"
                         android:textSize="15sp"
@@ -121,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Deaths"
+                        android:text="@string/number_of_deaths"
                         android:id="@+id/idTVDeaths"
                         android:textAlignment="center"
                         android:textColor="@color/red"
