--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:layout_margin="3dp"
                 android:gravity="center_horizontal"
                 android:padding="3dp"
-                android:text="World Wide Record"
+                android:text="@string/world_wide_record"
                 android:textAlignment="center"
                 android:textColor="@color/pink_500"
                 android:textSize="18sp" />
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:text="Cases"
+                    android:text="@string/cases"
                     android:textAlignment="center"
                     android:textColor="@color/yellow"
                     android:textSize="15sp"
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:text="Cases"
+                    android:text="@string/Cases"
                     android:textAlignment="center"
                     android:textColor="@color/green"
                     android:textSize="15sp"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:text="Number of Recovered"
+                    android:text="@string/number_of_recovered"
                     android:id="@+id/idTVWorldRecovered"
                     android:textAlignment="center"
                     android:textColor="@color/green"
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:text="Deaths"
+                    android:text="@string/deaths"
                     android:textAlignment="center"
                     android:textColor="@color/red"
                     android:textSize="15sp"
@@ -121,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="4dp"
-                    android:text="Number of Deaths"
+                    android:text="@string/number_of_deaths"
                     android:id="@+id/idTVWorldDeaths"
                     android:textAlignment="center"
                     android:textColor="@color/red"
@@ -150,7 +150,7 @@
                 android:layout_margin="3dp"
                 android:gravity="center_horizontal"
                 android:padding="3dp"
-                android:text="Indian Record"
+                android:text="@string/indian_record"
                 android:textAlignment="center"
                 android:textColor="@color/pink_500"
                 android:textSize="18sp" />
@@ -173,7 +173,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Cases"
+                        android:text="@string/Cases"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
                         android:textSize="15sp"
@@ -184,7 +184,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Cases"
+                        android:text="@string/number_of_cases"
                         android:id="@+id/idTVIndianCases"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
@@ -203,7 +203,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Cases"
+                        android:text="@string/Cases"
                         android:textAlignment="center"
                         android:textColor="@color/green"
                         android:textSize="15sp"
@@ -214,7 +214,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Recovered"
+                        android:text="@string/Number_of_Recovered"
                         android:id="@+id/idTVIndianRecovered"
                         android:textAlignment="center"
                         android:textColor="@color/green"
@@ -233,7 +233,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Deaths"
+                        android:text="@string/deaths"
                         android:textAlignment="center"
                         android:textColor="@color/red"
                         android:textSize="15sp"
@@ -244,7 +244,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Number of Deaths"
+                        android:text="@string/number_of_deaths"
                         android:id="@+id/idTVIndianDeaths"
                         android:textAlignment="center"
                         android:textColor="@color/red"
