--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -259,5 +259,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/idRVStates"/>
+    <LinearLayout
+        android:id="@+id/expandable_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/get_data_btn_reg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GET REGIONAL" />
+
+        <Button
+            android:id="@+id/get_data_btn_wor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GET WORLD" />
+        <Button
+            android:id="@+id/reset_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reset"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
 </LinearLayout>
