--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,6 +139,7 @@
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -252,6 +253,15 @@
 
                 </LinearLayout>
             </LinearLayout>
+            <Button
+                android:id="@+id/expand_collapse_button"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:text="Expand/Collapse"
+                android:backgroundTint="#00FF00"
+                />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -280,11 +290,13 @@
             android:id="@+id/reset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="Reset"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </LinearLayout>
 
 </LinearLayout>
