--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:layout_margin="3dp"
                 android:gravity="center_horizontal"
                 android:padding="3dp"
-                android:text="@string/world_wide_record"
+                android:text="Europe Record"
                 android:textAlignment="center"
                 android:textColor="@color/pink_500"
                 android:textSize="18sp" />
@@ -275,16 +275,17 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/get_data_btn_wor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GET EUROPE" />
+        <Button
             android:id="@+id/get_data_btn_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="GET REGIONAL" />
 
-        <Button
-            android:id="@+id/get_data_btn_wor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="GET WORLD" />
+
         <Button
             android:id="@+id/reset_button"
             android:layout_width="wrap_content"
