--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <lecho.lib.hellocharts.view.ColumnChartView
-        android:id="@+id/chart"
+        android:id="@+id/lineChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
