--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -289,7 +289,7 @@
             android:id="@+id/stats_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show Stats" />
+            android:text="Show Image" />
 
         <Button
             android:id="@+id/reset_button"
