--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/back_corona"
+    >
 
 
     <androidx.cardview.widget.CardView
@@ -19,7 +21,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/img_1"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -65,7 +69,8 @@
                     android:id="@+id/idTVWorldCases"
                     android:textAlignment="center"
                     android:textColor="@color/yellow"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -95,7 +100,8 @@
                     android:id="@+id/idTVWorldRecovered"
                     android:textAlignment="center"
                     android:textColor="@color/green"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -125,7 +131,8 @@
                     android:id="@+id/idTVWorldDeaths"
                     android:textAlignment="center"
                     android:textColor="@color/red"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
         </LinearLayout>
@@ -143,7 +150,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/eu_image"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -189,7 +198,8 @@
                         android:id="@+id/idTVIndianCases"
                         android:textAlignment="center"
                         android:textColor="@color/yellow"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
@@ -219,7 +229,8 @@
                         android:id="@+id/idTVIndianRecovered"
                         android:textAlignment="center"
                         android:textColor="@color/green"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
@@ -249,15 +260,16 @@
                         android:id="@+id/idTVIndianDeaths"
                         android:textAlignment="center"
                         android:textColor="@color/red"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
             </LinearLayout>
             <Button
                 android:id="@+id/expand_collapse_button"
                 android:layout_width="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
                 android:text="Expand/Collapse"
                 />
 
@@ -268,10 +280,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/idRVStates"/>
+
     <LinearLayout
         android:id="@+id/expandable_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="276dp"
         android:orientation="vertical">
 
         <Button
@@ -279,6 +292,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="GET WORLD" />
+
         <Button
             android:id="@+id/get_data_btn_reg"
             android:layout_width="match_parent"
@@ -300,18 +314,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/date_text_view"
-            android:layout_gravity="right|bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="date?" />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/date_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:text="date?"
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
