--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
+    <TextView
+        android:id="@+id/scoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/coronaimage" />
+        android:text="Score: 0"
+        android:textStyle="bold"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="850dp">
+
+        <ImageView
+            android:id="@+id/virusImageView"
+            android:layout_width="79dp"
+            android:layout_height="54dp"
+            android:src="@drawable/coronaimage" />
+
+        <TextView
+            android:id="@+id/catchMeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Catch Me!"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
