--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -303,7 +303,7 @@
             android:id="@+id/image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show Image" />
+            android:text="Play Game" />
 
         <Button
             android:id="@+id/reset_button"
