--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -307,7 +307,7 @@
             android:text="Play Game" />
 
         <Button
-            android:id="@+id/quiz_button"
+            android:id="@+id/chart_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
